turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:20: error: type mismatch;
 found   : Unit
 required: Int
	bouge(k,rule);
              ^LangtonsAnt:21: error: type mismatch;
 found   : Int(1)
 required: String
	if (k==colors.length-1) {setCouleurSol(colors(0))} else {setCouleurSol(colors(k+1))}
                                                                                        ^